fix app card spacing and export icons from figma

--- a/components/apps-grid/AppsGrid.scss
+++ b/components/apps-grid/AppsGrid.scss
@@ -1,53 +1,49 @@
-
-
-
 .app-grid {
-
 }
 
 .g-card {
-	&.app-card {
-		height: 100%;
-		.view-arrow {
-			margin-top: .25rem;
-		}
-		.icon-wrap {
-			margin: -6px -8px -11px;
-		}
-		.icon {
-			width: 73px;
-		}
-		&.large-icon {
-			position: relative;
-			.icon-wrap {
-				margin: -6px -10px -11px;
-			}
-			.icon {
-				width: 84px;
-			}
-			.view-text {
-				display: none;
-			}
-			.view-arrow {
-				position: absolute;
-				bottom: .5rem;
-				width: auto;
-				right: $space-2;
-				* {
-					stroke: lighten($main-color, 30%);
-				}
-			}
-			&:hover {
-				.view-arrow {
-					* {
-						stroke: $white;
-					}
-				}
-			}
-		}
-		.app-desc {
-			padding-top: .3rem;
-			max-width: 13.5rem;
-		}
-	}
+  &.app-card {
+    height: 100%;
+    .view-arrow {
+      margin-top: 0.25rem;
+    }
+    .icon-wrap {
+      margin: -6px -8px -11px;
+    }
+    .icon {
+      width: 73px;
+    }
+    &.large-icon {
+      position: relative;
+      .icon-wrap {
+        margin: -6px -10px -11px;
+      }
+      .icon {
+        width: 84px;
+      }
+      .view-text {
+        display: none;
+      }
+      .view-arrow {
+        position: absolute;
+        bottom: 0.5rem;
+        width: auto;
+        right: $space-2;
+        * {
+          stroke: lighten($main-color, 30%);
+        }
+      }
+      &:hover {
+        .view-arrow {
+          * {
+            stroke: $white;
+          }
+        }
+      }
+    }
+    .app-desc {
+      padding-top: 0.3rem;
+      max-width: 17.5rem;
+    }
+  }
 }
